--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -101,7 +101,10 @@ jobs:
         run: choco install strawberryperl -y
 
       - name: Install Rust
-        uses: dtolnay/rust-action@stable
+        run: |
+          Invoke-WebRequest -Uri https://win.rustup.rs/x86_64 -OutFile rustup-init.exe -UseBasicParsing
+          .\rustup-init.exe -y
+        shell: pwsh
 
       - name: Install MSYS2 and build tools
         run: |
@@ -111,7 +114,7 @@ jobs:
 
       - name: Build OpenRV (Windows)
         run: |
-          $env:Path = "C:\Strawberry\perl\bin;C:\msys64\usr\bin;$env:Path"
+          $env:Path = "$env:USERPROFILE\.cargo\bin;C:\Strawberry\perl\bin;C:\msys64\usr\bin;$env:Path"
           $env:QT_HOME = "C:\Qt\6.5.3\msvc2019_64"
           $env:BASH_EXE = "C:\msys64\usr\bin\bash.exe"
           $env:WIN_PERL = "C:/Strawberry/perl/bin"
