--- a/ci/linux/Dockerfile.rocky9
+++ b/ci/linux/Dockerfile.rocky9
@@ -1,17 +1,101 @@
 # OpenRV build image for Rocky Linux 9 (VFX CY2024).
-# Uses ASWF ci-openrv:2024; Qt is provided via Conan (e.g. /tmp/qttemp).
+# Uses Rocky + aqtinstall so Qt is in standard ~/Qt/6.5.3/gcc_64 layout (OpenRV validates QT_HOME).
 # Build from repo root: docker build -f ci/linux/Dockerfile.rocky9 .
-FROM aswf/ci-openrv:2024
+FROM rockylinux:9
 
-USER root
-# Ensure git is available for cloning upstream
-RUN dnf install -y git && dnf clean all && rm -rf /var/cache/dnf
+ENV CMAKE_VERSION=3.31.6
+ENV NINJA_VERSION=1.12.1
+ENV PYTHON_VERSION=3.11.8
+ENV QT_VERSION=6.5.3
+ENV QT_QPA_PLATFORM=offscreen
+
+# Install tools and build dependencies (minimal set for OpenRV)
+RUN dnf upgrade -y \
+    && dnf install -y epel-release \
+    && dnf config-manager --set-enabled crb devel \
+    && dnf install -y perl-CPAN \
+    && cpan FindBin \
+    && dnf install -y \
+    alsa-lib-devel \
+    autoconf \
+    automake \
+    avahi-compat-libdns_sd-devel \
+    bison \
+    bzip2-devel \
+    curl-devel \
+    flex \
+    gcc \
+    gcc-c++ \
+    git \
+    libX11-devel \
+    libXcomposite-devel \
+    libXcursor-devel \
+    libXdamage \
+    libXext-devel \
+    libXi-devel \
+    libXrandr-devel \
+    libXrender-devel \
+    libXtst \
+    libXxf86vm-devel \
+    libaio-devel \
+    libffi-devel \
+    libtool \
+    libxkbcommon-devel \
+    libxkbfile \
+    mesa-libGLU-devel \
+    mesa-libOSMesa-devel \
+    meson \
+    nasm \
+    ncurses-devel \
+    nss \
+    ocl-icd-devel \
+    opencl-headers \
+    openssl-devel \
+    patch \
+    patchelf \
+    readline-devel \
+    sqlite-devel \
+    unzip \
+    wget \
+    xz-devel \
+    yasm \
+    zip \
+    zlib-devel \
+    && dnf config-manager --set-disabled devel \
+    && dnf clean all \
+    && rm -rf /var/cache/dnf
+
+# CMake
+RUN curl -sL "https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-linux-x86_64.sh" -o cmake.sh \
+    && sh cmake.sh --prefix=/usr/local --skip-license \
+    && rm cmake.sh
+ENV PATH="/usr/local/bin:${PATH}"
+
+# Ninja
+RUN curl -sL "https://github.com/ninja-build/ninja/releases/download/v${NINJA_VERSION}/ninja-linux.zip" -o ninja.zip \
+    && unzip ninja.zip -d /usr/local/bin \
+    && rm ninja.zip
+
+# Python 3.11 via pyenv (Rocky 9 may not have 3.11 in base repos)
+RUN git clone https://github.com/pyenv/pyenv.git /opt/pyenv \
+    && /opt/pyenv/bin/pyenv install ${PYTHON_VERSION} \
+    && /opt/pyenv/bin/pyenv global ${PYTHON_VERSION}
+ENV PYENV_ROOT=/opt/pyenv
+ENV PATH="${PYENV_ROOT}/shims:${PYENV_ROOT}/bin:${PATH}"
+
+# Qt 6.5.3 via aqtinstall (standard layout so OpenRV accepts QT_HOME)
+RUN python3 -m pip install aqtinstall \
+    && python3 -m aqt install-qt linux desktop ${QT_VERSION} gcc_64 -O /opt/qt \
+    --archives qtbase qtdeclarative qtsvg qttools qttranslations qtwayland icu
+
+ENV QT_HOME=/opt/qt/6.5.3/gcc_64
+ENV PATH="${QT_HOME}/bin:${PATH}"
+ENV CMAKE_PREFIX_PATH="${QT_HOME}"
 
 # Copy build scripts (context is repo root)
 COPY ci/linux/detect_qt.sh ci/linux/build_in_container.sh /ci/
 RUN chmod +x /ci/detect_qt.sh /ci/build_in_container.sh
 
-# Output directory for artifacts (mount in CI)
 RUN mkdir -p /out
 WORKDIR /work
 
