--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -110,14 +110,19 @@ jobs:
         run: |
           choco install msys2 -y
           $env:Path = "C:\msys64\usr\bin;$env:Path"
-          bash -lc "pacman -Sy --noconfirm --needed mingw-w64-x86_64-toolchain autoconf automake bison flex git libtool nasm patch unzip zip"
+          # OpenRV Windows docs: use MSYS2 MinGW64; install exact pacman list from config_windows.html
+          bash -lc "pacman -Sy --noconfirm --needed mingw-w64-x86_64-autotools mingw-w64-x86_64-glew mingw-w64-x86_64-libarchive mingw-w64-x86_64-make mingw-w64-x86_64-meson mingw-w64-x86_64-toolchain autoconf automake bison flex git libtool nasm p7zip patch unzip zip"
 
       - name: Build OpenRV (Windows)
         run: |
-          $env:Path = "$env:USERPROFILE\.cargo\bin;C:\Strawberry\perl\bin;C:\msys64\usr\bin;$env:Path"
+          # PATH order per OpenRV docs: CMake, Python, Rust, MSYS2 mingw64/bin, then rest, Strawberry last
+          $cmakeBin = "C:\Program Files\CMake\bin"
+          $pyBin = (Split-Path (Get-Command python).Source)
+          $env:Path = "$cmakeBin;$pyBin;$env:USERPROFILE\.cargo\bin;C:\msys64\mingw64\bin;C:\msys64\usr\bin;$env:Path;C:\Strawberry\perl\bin"
           $env:QT_HOME = "C:\Qt\6.5.3\msvc2019_64"
           $env:BASH_EXE = "C:\msys64\usr\bin\bash.exe"
           $env:WIN_PERL = "C:/Strawberry/perl/bin"
+          $env:MSYSTEM = "MINGW64"
           .\ci\windows\build_windows.ps1 -Tag '${{ env.OPENRV_TAG }}' -WorkDir "C:\OpenRV"
         shell: pwsh
 
