--- a/ci/linux/Dockerfile.rocky9
+++ b/ci/linux/Dockerfile.rocky9
@@ -84,8 +84,10 @@ ENV PYENV_ROOT=/opt/pyenv
 ENV PATH="${PYENV_ROOT}/shims:${PYENV_ROOT}/bin:${PATH}"
 
 # Qt 6.5.3 via aqtinstall (standard layout so OpenRV accepts QT_HOME)
-RUN python3 -m pip install aqtinstall \
-    && python3 -m aqt install-qt linux desktop ${QT_VERSION} gcc_64 -O /opt/qt \
+# Use pyenv Python explicitly (system python3 has no pip on Rocky 9)
+RUN /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 -m ensurepip --upgrade \
+    && /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 -m pip install aqtinstall \
+    && /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 -m aqt install-qt linux desktop ${QT_VERSION} gcc_64 -O /opt/qt \
     --archives qtbase qtdeclarative qtsvg qttools qttranslations qtwayland icu
 
 ENV QT_HOME=/opt/qt/6.5.3/gcc_64
