--- a/ci/linux/Dockerfile.ubuntu22.04
+++ b/ci/linux/Dockerfile.ubuntu22.04
@@ -27,6 +27,7 @@ RUN apt-get update \
     libncurses-dev \
     libnss3-dev \
     libreadline-dev \
+    libssl-dev \
     libsqlite3-dev \
     libx11-dev \
     libxcomposite-dev \
@@ -46,9 +47,6 @@ RUN apt-get update \
     patch \
     patchelf \
     pkg-config \
-    python3-dev \
-    python3-pip \
-    python3-venv \
     unzip \
     wget \
     xz-utils \
@@ -64,19 +62,15 @@ RUN curl -sL "https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSIO
     && rm cmake.sh
 ENV PATH="/usr/local/bin:${PATH}"
 
-# Python 3.11 via deadsnakes or use system 3.10 and accept; OpenRV CY2024 wants 3.11
-RUN apt-get update && apt-get install -y --no-install-recommends software-properties-common \
-    && add-apt-repository -y ppa:deadsnakes/ppa \
-    && apt-get update \
-    && apt-get install -y --no-install-recommends python3.11 python3.11-dev python3.11-venv \
-    && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN python3 -m pip install --break-system-packages aqtinstall
-
-# Install Qt 6.5.3 to /opt/qt (or ~/Qt for non-root)
-RUN python3 -m aqt install-qt linux desktop ${QT_VERSION} gcc_64 -O /opt/qt \
+# Python 3.11 via uv + Qt 6.5.3 via aqtinstall; symlink python3 so OpenRV build finds it
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh \
+    && export PATH="/root/.local/bin:$PATH" \
+    && uv python install ${PYTHON_VERSION} \
+    && ln -sf "$(uv python find ${PYTHON_VERSION})" /usr/local/bin/python3 \
+    && uv run --python ${PYTHON_VERSION} -m pip install aqtinstall \
+    && uv run --python ${PYTHON_VERSION} -m aqt install-qt linux desktop ${QT_VERSION} gcc_64 -O /opt/qt \
     --archives qtbase qtdeclarative qtsvg qttools qttranslations qtwayland icu
+ENV PATH="/root/.local/bin:${PATH}"
 
 ENV QT_HOME=/opt/qt/6.5.3/gcc_64
 ENV PATH="${QT_HOME}/bin:${PATH}"
