Refactor Dockerfiles to use pyenv for Python installation and Qt setup, enhancing compatibility and simplifying the build process across Linux distributions. Updated Windows workflow to include additional Qt modules required by OpenRV.

--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -93,7 +93,8 @@ jobs:
       - name: Install Qt 6.5.3
         run: |
           pip install aqtinstall
-          aqt install-qt windows desktop 6.5.3 win64_msvc2019_64 -O C:\Qt
+          # OpenRV requires Qt6WebEngineCore (and recommends WebSockets, Multimedia, Declarative)
+          aqt install-qt windows desktop 6.5.3 win64_msvc2019_64 -O C:\Qt -m qtwebengine qtwebsockets qtmultimedia
         env:
           QT_HOME: C:\Qt\6.5.3\msvc2019_64
 
