--- a/ci/linux/Dockerfile.ubuntu22.04
+++ b/ci/linux/Dockerfile.ubuntu22.04
@@ -22,6 +22,7 @@ RUN apt-get update \
     libavahi-compat-libdnssd-dev \
     libbz2-dev \
     libffi-dev \
+    liblzma-dev \
     libgl1-mesa-dev \
     libglu1-mesa-dev \
     libncurses-dev \
@@ -62,10 +63,10 @@ RUN curl -sL "https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSIO
     && rm cmake.sh
 ENV PATH="/usr/local/bin:${PATH}"
 
-# Python 3.11 via pyenv + Qt 6.5.3 via aqtinstall; all in one RUN so path exists, explicit python for ensurepip/pip
+# Python 3.11 via pyenv + Qt 6.5.3 via aqtinstall; PYENV_ROOT so versions live under /opt/pyenv
 RUN git clone https://github.com/pyenv/pyenv.git /opt/pyenv \
-    && /opt/pyenv/bin/pyenv install ${PYTHON_VERSION} \
-    && /opt/pyenv/bin/pyenv global ${PYTHON_VERSION} \
+    && PYENV_ROOT=/opt/pyenv /opt/pyenv/bin/pyenv install ${PYTHON_VERSION} \
+    && PYENV_ROOT=/opt/pyenv /opt/pyenv/bin/pyenv global ${PYTHON_VERSION} \
     && /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 -m ensurepip --upgrade \
     && /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 -m pip install aqtinstall \
     && /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 -m aqt install-qt linux desktop ${QT_VERSION} gcc_64 -O /opt/qt \
