--- a/ci/linux/Dockerfile.rocky9
+++ b/ci/linux/Dockerfile.rocky9
@@ -84,6 +84,7 @@ RUN git clone https://github.com/pyenv/pyenv.git /opt/pyenv \
     && /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 -m pip install aqtinstall \
     && /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 -m aqt install-qt linux desktop ${QT_VERSION} gcc_64 -O /opt/qt \
     --archives qtbase qtdeclarative qtsvg qttools qttranslations qtwayland icu \
+    -m qtwebchannel qtwebengine \
     && ln -sf /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 /usr/local/bin/python3
 # Explicit pyenv version path first (shims can fail in non-interactive container)
 ENV PATH="/opt/pyenv/versions/${PYTHON_VERSION}/bin:/opt/pyenv/shims:/opt/pyenv/bin:${PATH}"
