--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -96,11 +96,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Clone OpenRV (for pip cache key)
+        run: |
+          git clone --depth 1 --branch "${{ env.OPENRV_TAG }}" "${{ env.OPENRV_REPO }}" openrv-src
+        shell: bash
+
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
+          cache-dependency-path: openrv-src/requirements.txt
 
       - name: Ensure python3.exe
         run: |
