--- a/ci/linux/Dockerfile.rocky9
+++ b/ci/linux/Dockerfile.rocky9
@@ -24,6 +24,7 @@ RUN dnf upgrade -y \
     bzip2-devel \
     curl-devel \
     flex \
+    freetype-devel \
     gcc \
     gcc-c++ \
     git \
@@ -64,6 +65,9 @@ RUN dnf upgrade -y \
     && dnf config-manager --set-disabled devel \
     && dnf clean all \
     && rm -rf /var/cache/dnf
+
+# Ensure Freetype is present (OpenRV src/pub/freetype); separate layer so cache doesn't skip it
+RUN dnf install -y freetype-devel && dnf clean all && rm -rf /var/cache/dnf
 
 # CMake
 RUN curl -sL "https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-linux-x86_64.sh" -o cmake.sh \
