--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -180,19 +180,16 @@ jobs:
 
       - name: Build OpenRV (Windows)
         run: |
-          # PATH order per OpenRV docs: CMake, Python, Rust, MSYS2 mingw64/bin, then rest, Strawberry last.
-          # Keep VS in PATH so OpenSSL build (make_openssl.py -> nmake) and Python wheel builds can find cl/nmake.
+          # Run build inside VS developer environment so CMake finds cl.exe (Visual Studio 17 2022 generator).
+          $vcvars = Get-ChildItem -Path "C:\Program Files (x86)\Microsoft Visual Studio\2022" -Recurse -Filter "vcvars64.bat" -ErrorAction SilentlyContinue | Select-Object -First 1 -ExpandProperty FullName
+          if (-not $vcvars) { $vcvars = Get-ChildItem -Path "C:\Program Files\Microsoft Visual Studio\2022" -Recurse -Filter "vcvars64.bat" -ErrorAction SilentlyContinue | Select-Object -First 1 -ExpandProperty FullName }
+          if (-not $vcvars) { throw "vcvars64.bat not found" }
           $cmakeBin = "C:\Program Files\CMake\bin"
           $pyBin = (Split-Path (Get-Command python).Source)
-          $env:Path = "$cmakeBin;$pyBin;$env:USERPROFILE\.cargo\bin;C:\msys64\mingw64\bin;C:\msys64\usr\bin;$env:Path;C:\Strawberry\perl\bin"
-          $env:QT_HOME = "C:\Qt\6.5.3\msvc2019_64"
-          $env:BASH_EXE = "C:\msys64\usr\bin\bash.exe"
-          $env:WIN_PERL = "C:/Strawberry/perl/bin"
-          $env:MSYSTEM = "MINGW64"
-          # Mitigate Python wheel build errors (e.g. OpenTimelineIO) from MSVC FileTracker on Windows
-          $env:CL = "/FS"
-          $env:DISTUTILS_USE_SDK = "1"
-          .\ci\windows\build_windows.ps1 -Tag '${{ env.OPENRV_TAG }}' -WorkDir "C:\OpenRV"
+          $pathPre = "$cmakeBin;$pyBin;$env:USERPROFILE\.cargo\bin;C:\msys64\mingw64\bin;C:\msys64\usr\bin"
+          $pathSuf = "C:\Strawberry\perl\bin"
+          $tag = "${{ env.OPENRV_TAG }}"
+          cmd /c "`"$vcvars`" && set PATH=$pathPre;%PATH%;$pathSuf && set QT_HOME=C:\Qt\6.5.3\msvc2019_64 && set BASH_EXE=C:\msys64\usr\bin\bash.exe && set WIN_PERL=C:/Strawberry/perl/bin && set MSYSTEM=MINGW64 && set CL=/FS && set DISTUTILS_USE_SDK=1 && powershell -NoProfile -ExecutionPolicy Bypass -File ci\windows\build_windows.ps1 -Tag $tag -WorkDir C:\OpenRV"
         shell: pwsh
 
       - name: Package OpenRV (Windows)
