--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -180,20 +180,14 @@ jobs:
 
       - name: Build OpenRV (Windows)
         run: |
-          # Ensure MSVC (cl.exe) and nmake are on PATH so CMake and OpenSSL build find them.
-          $vcdir = Get-ChildItem -Path "C:\Program Files\Microsoft Visual Studio\2022" -Recurse -Filter "cl.exe" -ErrorAction SilentlyContinue | Select-Object -First 1 -ExpandProperty DirectoryName
-          if (-not $vcdir) { $vcdir = Get-ChildItem -Path "C:\Program Files (x86)\Microsoft Visual Studio\2022" -Recurse -Filter "cl.exe" -ErrorAction SilentlyContinue | Select-Object -First 1 -ExpandProperty DirectoryName }
-          if (-not $vcdir) { throw "MSVC cl.exe not found" }
-          $cmakeBin = "C:\Program Files\CMake\bin"
-          $pyBin = (Split-Path (Get-Command python).Source)
-          $env:Path = "$cmakeBin;$pyBin;$env:USERPROFILE\.cargo\bin;C:\msys64\mingw64\bin;C:\msys64\usr\bin;$vcdir;$env:Path;C:\Strawberry\perl\bin"
-          $env:QT_HOME = "C:\Qt\6.5.3\msvc2019_64"
-          $env:BASH_EXE = "C:\msys64\usr\bin\bash.exe"
-          $env:WIN_PERL = "C:/Strawberry/perl/bin"
-          $env:MSYSTEM = "MINGW64"
-          $env:CL = "/FS"
-          $env:DISTUTILS_USE_SDK = "1"
-          .\ci\windows\build_windows.ps1 -Tag '${{ env.OPENRV_TAG }}' -WorkDir "C:\OpenRV"
+          # Run build inside VS developer environment so CMake finds C/C++ compiler (Visual Studio 17 2022 generator).
+          $vcvars = Get-ChildItem -Path "C:\Program Files (x86)\Microsoft Visual Studio\2022" -Recurse -Filter "vcvars64.bat" -ErrorAction SilentlyContinue | Select-Object -First 1 -ExpandProperty FullName
+          if (-not $vcvars) { $vcvars = Get-ChildItem -Path "C:\Program Files\Microsoft Visual Studio\2022" -Recurse -Filter "vcvars64.bat" -ErrorAction SilentlyContinue | Select-Object -First 1 -ExpandProperty FullName }
+          if (-not $vcvars) { throw "vcvars64.bat not found" }
+          $pathPre = "C:\Program Files\CMake\bin;" + (Split-Path (Get-Command python).Source) + ";$env:USERPROFILE\.cargo\bin;C:\msys64\mingw64\bin;C:\msys64\usr\bin"
+          $pathSuf = "C:\Strawberry\perl\bin"
+          $tag = "${{ env.OPENRV_TAG }}"
+          cmd /c "call `"$vcvars`" && set `"PATH=$pathPre;%PATH%;$pathSuf`" && set QT_HOME=C:\Qt\6.5.3\msvc2019_64 && set BASH_EXE=C:\msys64\usr\bin\bash.exe && set WIN_PERL=C:/Strawberry/perl/bin && set MSYSTEM=MINGW64 && set CL=/FS && set DISTUTILS_USE_SDK=1 && powershell -NoProfile -File ci\windows\build_windows.ps1 -Tag $tag -WorkDir C:\OpenRV"
         shell: pwsh
 
       - name: Package OpenRV (Windows)
