--- a/ci/linux/Dockerfile.ubuntu22.04
+++ b/ci/linux/Dockerfile.ubuntu22.04
@@ -1,104 +1,165 @@
 # OpenRV build image for Ubuntu 22.04 (experimental, best-effort).
-# VFX CY2024: Qt 6.5.3, Python 3.11. Reuses build_in_container.sh with DISTRO_SUFFIX=linux-ubuntu22.04.
+# Translated from upstream Rocky 9 CY2024 Dockerfile with equivalent Ubuntu packages.
+# VFX CY2024: Qt 6.5.3, Python 3.11.
 # Build from repo root: docker build -f ci/linux/Dockerfile.ubuntu22.04 .
 FROM ubuntu:22.04
 
+LABEL maintainer="OpenRV-builds CI"
+
+# static versions (match upstream Rocky 9 Dockerfile)
+ENV CMAKE_VERSION="3.31.6" \
+    NINJA_VERSION="1.12.1"
+
+# CY2024 Configuration (match upstream)
+ENV VFX_PLATFORM="CY2024" \
+    PYTHON_VERSION="3.11.8" \
+    QT_VERSION="6.5.3" \
+    QT_MODULES="debug_info qt3d qt5compat qtcharts qtconnectivity qtdatavis3d qtgrpc qthttpserver qtimageformats qtlanguageserver qtlocation qtlottie qtmultimedia qtnetworkauth qtpdf qtpositioning qtquick3d qtquick3dphysics qtquickeffectmaker qtquicktimeline qtremoteobjects qtscxml qtsensors qtserialbus qtserialport qtshadertools qtspeech qtvirtualkeyboard qtwaylandcompositor qtwebchannel qtwebengine qtwebsockets qtwebview" \
+    QT_ARCHIVES="icu qtbase qtdeclarative qtsvg qttools qttranslations qtwayland"
+
 ENV DEBIAN_FRONTEND=noninteractive
-ENV QT_VERSION=6.5.3
-ENV PYTHON_VERSION=3.11.8
 ENV QT_QPA_PLATFORM=offscreen
 
-# Enable universe and install build deps in a single layer so apt indexes are fresh
+# Install tools and build dependencies (translated from Rocky 9 upstream Dockerfile)
+# Package mapping: Rocky 9 dnf -> Ubuntu 22.04 apt
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends software-properties-common \
-    && add-apt-repository -y universe \
-    && apt-get update \
     && apt-get install -y --no-install-recommends \
+    # Build essentials (gcc, g++, make, etc.)
     build-essential \
     ca-certificates \
+    # RV requirements (translated from Rocky 9)
+    libasound2-dev \
+    autoconf \
+    automake \
+    libavahi-compat-libdnssd-dev \
     bison \
-    curl \
+    libbz2-dev \
+    libcurl4-openssl-dev \
     flex \
     git \
-    libasound2-dev \
-    libavahi-compat-libdnssd-dev \
-    libbz2-dev \
-    libffi-dev \
-    libfreetype6-dev \
-    liblzma-dev \
-    libgl1-mesa-dev \
-    libglu1-mesa-dev \
-    libosmesa6-dev \
-    libncurses-dev \
-    libnss3-dev \
-    libreadline-dev \
-    libssl-dev \
-    libsqlite3-dev \
+    # X11 libraries
     libx11-dev \
+    libxcomposite1 \
     libxcomposite-dev \
+    libxcursor1 \
     libxcursor-dev \
+    libxdamage1 \
     libxdamage-dev \
     libxext-dev \
     libxi-dev \
-    libxkbcommon-dev \
+    libxrandr2 \
     libxrandr-dev \
     libxrender-dev \
+    libxtst6 \
     libxtst-dev \
     libxxf86vm-dev \
-    libvulkan-dev \
+    # System libraries
+    libaio-dev \
+    libffi-dev \
+    libtool \
+    libxkbcommon0 \
+    libxkbcommon-dev \
+    libxkbfile1 \
+    libxkbfile-dev \
+    # OpenGL/Mesa (critical for GLEW build)
+    libgl-dev \
+    libgl1-mesa-dev \
+    libglu1-mesa \
+    libglu1-mesa-dev \
+    libosmesa6 \
+    libosmesa6-dev \
+    libglvnd-dev \
+    libglx-dev \
+    libdrm-dev \
+    libegl-dev \
+    # Build tools
     meson \
     nasm \
-    ninja-build \
+    libncurses-dev \
+    libnss3 \
+    libnss3-dev \
+    # OpenCL
+    ocl-icd-libopencl1 \
     ocl-icd-opencl-dev \
+    opencl-headers \
+    # SSL and other libs
+    libssl-dev \
     patch \
     patchelf \
-    pkg-config \
-    unzip \
+    libpcsclite-dev \
+    libpulse0 \
+    libpulse-mainloop-glib0 \
+    libpulse-dev \
+    # Qt5 base (needed for some build tooling)
+    qtbase5-dev \
+    libreadline-dev \
+    libsqlite3-dev \
+    libsystemd-dev \
+    tcl-dev \
+    tcsh \
+    tk-dev \
     wget \
-    xz-utils \
+    liblzma-dev \
     yasm \
     zip \
+    unzip \
     zlib1g-dev \
+    # Additional utilities
+    pkg-config \
+    xz-utils \
     && rm -rf /var/lib/apt/lists/*
 
-# Ensure Freetype is present (OpenRV src/pub/freetype); separate layer so cache doesn't skip it
-RUN apt-get update && apt-get install -y --no-install-recommends libfreetype6-dev && rm -rf /var/lib/apt/lists/*
-
-# Ensure OSMesa is present (FindOSMesa / TwkGLFMesa); separate layer so cache doesn't skip it
-RUN apt-get update && apt-get install -y --no-install-recommends libosmesa6-dev && rm -rf /var/lib/apt/lists/*
-
-# Ensure Vulkan is present (WrapVulkanHeaders / Vulkan_INCLUDE_DIR); separate layer so cache doesn't skip it
-RUN apt-get update && apt-get install -y --no-install-recommends libvulkan-dev && rm -rf /var/lib/apt/lists/*
-
-# CMake (Ubuntu 22.04 cmake may be too old)
-ENV CMAKE_VERSION=3.31.6
+# Install CMake (Ubuntu 22.04's cmake may be too old)
 RUN curl -sL "https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-linux-x86_64.sh" -o cmake.sh \
     && sh cmake.sh --prefix=/usr/local --skip-license \
     && rm cmake.sh
 ENV PATH="/usr/local/bin:${PATH}"
 
-# Python 3.11 via pyenv + Qt 6.5.3 via aqtinstall; PYENV_ROOT so versions live under /opt/pyenv
-RUN git clone https://github.com/pyenv/pyenv.git /opt/pyenv \
-    && PYENV_ROOT=/opt/pyenv /opt/pyenv/bin/pyenv install ${PYTHON_VERSION} \
-    && PYENV_ROOT=/opt/pyenv /opt/pyenv/bin/pyenv global ${PYTHON_VERSION} \
-    && /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 -m ensurepip --upgrade \
-    && /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 -m pip install aqtinstall \
-    && /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 -m aqt install-qt linux desktop ${QT_VERSION} gcc_64 -O /opt/qt \
-    --archives qtbase qtdeclarative qtsvg qttools qttranslations qtwayland icu \
-    -m qtwebchannel qtwebengine qtmultimedia qtpositioning \
-    && ln -sf /opt/pyenv/versions/${PYTHON_VERSION}/bin/python3 /usr/local/bin/python3
-# Explicit pyenv version path first (shims can fail in non-interactive container)
-ENV PATH="/opt/pyenv/versions/${PYTHON_VERSION}/bin:/opt/pyenv/shims:/opt/pyenv/bin:${PATH}"
+# Create and run as user rv (match upstream)
+RUN useradd -u 1001 -ms /bin/bash rv
+WORKDIR /home/rv
+USER rv
 
-ENV QT_HOME=/opt/qt/6.5.3/gcc_64
+ENV PATH=/home/rv/.local/bin:/usr/local/bin:$PATH
+
+# Install Ninja
+RUN wget https://github.com/ninja-build/ninja/releases/download/v${NINJA_VERSION}/ninja-linux.zip \
+    && unzip ninja-linux.zip -d ./ninja \
+    && echo 'export PATH=/home/rv/ninja:$PATH' >> /home/rv/.bash_profile \
+    && rm ninja-linux.zip
+ENV PATH=/home/rv/ninja:$PATH
+
+# Install pyenv
+RUN git clone http://github.com/pyenv/pyenv.git /home/rv/.pyenv
+ENV PYENV_ROOT=/home/rv/.pyenv
+ENV PATH=$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH
+RUN echo 'export PYENV_ROOT="/home/rv/.pyenv"' >> ~/.bashrc \
+    && echo 'export PATH="$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc \
+    && echo 'eval "$(pyenv init -)"' >> ~/.bashrc
+
+# Python environment
+RUN pyenv install ${PYTHON_VERSION} \
+    && pyenv global ${PYTHON_VERSION}
+
+RUN python -m pip install aqtinstall
+
+# Install Qt (match upstream modules and archives)
+RUN python -m aqt install-qt linux desktop ${QT_VERSION} gcc_64 -O ~/Qt \
+    -m ${QT_MODULES} \
+    --archives ${QT_ARCHIVES}
+
+# Set Qt environment
+ENV QT_HOME=/home/rv/Qt/${QT_VERSION}/gcc_64
 ENV PATH="${QT_HOME}/bin:${PATH}"
 ENV CMAKE_PREFIX_PATH="${QT_HOME}"
 
 # Copy build scripts (context is repo root)
 COPY ci/linux/detect_qt.sh ci/linux/build_in_container.sh /ci/
+USER root
 RUN chmod +x /ci/detect_qt.sh /ci/build_in_container.sh
+USER rv
 
-RUN mkdir -p /out
-WORKDIR /work
+RUN mkdir -p /home/rv/out
+WORKDIR /home/rv
 
 ENTRYPOINT ["/ci/build_in_container.sh"]
