Update CI workflows and Dockerfile for improved build process
Modify the openrv-release.yml to explicitly invoke the build script with bash for better compatibility. Add curl to the Ubuntu 22.04 Dockerfile to ensure all necessary dependencies are available during the build process.

--- a/ci/linux/Dockerfile.ubuntu22.04
+++ b/ci/linux/Dockerfile.ubuntu22.04
@@ -27,6 +27,7 @@ RUN apt-get update \
     # Build essentials (gcc, g++, make, etc.)
     build-essential \
     ca-certificates \
+    curl \
     # RV requirements (translated from Rocky 9)
     libasound2-dev \
     autoconf \
