--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -55,7 +55,7 @@ jobs:
             -v "${{ github.workspace }}/ci/linux:/ci:ro" \
             -v "${{ github.workspace }}/out:/out" \
             openrv-build-rocky9 \
-            /ci/build_in_container.sh
+            bash /ci/build_in_container.sh
 
       - name: Upload Rocky9 artifact
         uses: actions/upload-artifact@v4
