--- a/ci/linux/Dockerfile.ubuntu22.04
+++ b/ci/linux/Dockerfile.ubuntu22.04
@@ -1,160 +1,106 @@
 # OpenRV build image for Ubuntu 22.04 (experimental, best-effort).
-# Translated from upstream Rocky 9 CY2024 Dockerfile with equivalent Ubuntu packages.
-# VFX CY2024: Qt 6.5.3, Python 3.11.
+# Translated from upstream Rocky 9 CY2024 with equivalent Ubuntu packages.
+# Layer order: base deps -> CMake -> Ninja -> pyenv -> Python -> aqtinstall -> Qt -> (scripts last)
+# So changes to ci/linux/*.sh do not invalidate Qt/Python cache.
 # Build from repo root: docker build -f ci/linux/Dockerfile.ubuntu22.04 .
 FROM ubuntu:22.04
 
 LABEL maintainer="OpenRV-builds CI"
 
-# static versions (match upstream Rocky 9 Dockerfile)
+# -----------------------------------------------------------------------------
+# Version pins (bump these to invalidate cache when upgrading)
+# -----------------------------------------------------------------------------
 ENV CMAKE_VERSION="3.31.6" \
-    NINJA_VERSION="1.12.1"
-
-# CY2024 Configuration (match upstream)
-ENV VFX_PLATFORM="CY2024" \
+    NINJA_VERSION="1.12.1" \
     PYTHON_VERSION="3.11.8" \
-    QT_VERSION="6.5.3" \
+    QT_VERSION="6.5.3"
+
+ENV VFX_PLATFORM="CY2024" \
     QT_MODULES="debug_info qt3d qt5compat qtcharts qtconnectivity qtdatavis3d qtgrpc qthttpserver qtimageformats qtlanguageserver qtlocation qtlottie qtmultimedia qtnetworkauth qtpdf qtpositioning qtquick3d qtquick3dphysics qtquickeffectmaker qtquicktimeline qtremoteobjects qtscxml qtsensors qtserialbus qtserialport qtshadertools qtspeech qtvirtualkeyboard qtwaylandcompositor qtwebchannel qtwebengine qtwebsockets qtwebview" \
     QT_ARCHIVES="icu qtbase qtdeclarative qtsvg qttools qttranslations qtwayland"
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV QT_QPA_PLATFORM=offscreen
 
-# Install tools and build dependencies (translated from Rocky 9 upstream Dockerfile)
-# Package mapping: Rocky 9 dnf -> Ubuntu 22.04 apt
+# -----------------------------------------------------------------------------
+# Layer 1: System packages (rarely change; large cache)
+# -----------------------------------------------------------------------------
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-    # Build essentials (gcc, g++, make, etc.)
-    build-essential \
-    ca-certificates \
-    curl \
-    # RV requirements (translated from Rocky 9)
-    libasound2-dev \
-    autoconf \
-    automake \
-    libavahi-compat-libdnssd-dev \
-    bison \
-    libbz2-dev \
-    libcurl4-openssl-dev \
-    flex \
-    git \
-    # X11 libraries
-    libx11-dev \
-    libxcomposite1 \
-    libxcomposite-dev \
-    libxcursor1 \
-    libxcursor-dev \
-    libxdamage1 \
-    libxdamage-dev \
-    libxext-dev \
-    libxi-dev \
-    libxrandr2 \
-    libxrandr-dev \
-    libxrender-dev \
-    libxtst6 \
-    libxtst-dev \
-    libxxf86vm-dev \
-    # System libraries
-    libaio-dev \
-    libffi-dev \
-    libtool \
-    libxkbcommon0 \
-    libxkbcommon-dev \
-    libxkbfile1 \
-    libxkbfile-dev \
-    # OpenGL/Mesa (critical for GLEW build)
-    libgl-dev \
-    libgl1-mesa-dev \
-    libglu1-mesa \
-    libglu1-mesa-dev \
-    libosmesa6 \
-    libosmesa6-dev \
-    libglvnd-dev \
-    libglx-dev \
-    libdrm-dev \
-    libegl-dev \
-    # Build tools
-    meson \
-    nasm \
-    libncurses-dev \
-    libnss3 \
-    libnss3-dev \
-    # OpenCL
-    ocl-icd-libopencl1 \
-    ocl-icd-opencl-dev \
-    opencl-headers \
-    # SSL and other libs
-    libssl-dev \
-    patch \
-    patchelf \
-    libpcsclite-dev \
-    libpulse0 \
-    libpulse-mainloop-glib0 \
-    libpulse-dev \
-    # Qt5 base (needed for some build tooling)
-    qtbase5-dev \
-    libreadline-dev \
-    libsqlite3-dev \
-    libsystemd-dev \
-    tcl-dev \
-    tcsh \
-    tk-dev \
-    wget \
-    liblzma-dev \
-    yasm \
-    zip \
-    unzip \
-    zlib1g-dev \
-    # Additional utilities
-    pkg-config \
-    xz-utils \
+    build-essential ca-certificates curl \
+    libasound2-dev autoconf automake libavahi-compat-libdnssd-dev bison \
+    libbz2-dev libcurl4-openssl-dev flex git \
+    libx11-dev libxcomposite1 libxcomposite-dev libxcursor1 libxcursor-dev \
+    libxdamage1 libxdamage-dev libxext-dev libxi-dev libxrandr2 libxrandr-dev \
+    libxrender-dev libxtst6 libxtst-dev libxxf86vm-dev \
+    libaio-dev libffi-dev libtool libxkbcommon0 libxkbcommon-dev libxkbfile1 libxkbfile-dev \
+    libgl-dev libgl1-mesa-dev libglu1-mesa libglu1-mesa-dev \
+    libosmesa6 libosmesa6-dev libglvnd-dev libglx-dev libdrm-dev libegl-dev \
+    meson nasm libncurses-dev libnss3 libnss3-dev \
+    ocl-icd-libopencl1 ocl-icd-opencl-dev opencl-headers \
+    libssl-dev patch patchelf libpcsclite-dev \
+    libpulse0 libpulse-mainloop-glib0 libpulse-dev \
+    qtbase5-dev libreadline-dev libsqlite3-dev libsystemd-dev tcl-dev tcsh tk-dev \
+    wget liblzma-dev yasm zip unzip zlib1g-dev pkg-config xz-utils \
     && rm -rf /var/lib/apt/lists/*
 
-# Install CMake (Ubuntu 22.04's cmake may be too old)
+# -----------------------------------------------------------------------------
+# Layer 2: CMake (rarely change)
+# -----------------------------------------------------------------------------
 RUN curl -sL "https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-linux-x86_64.sh" -o cmake.sh \
     && sh cmake.sh --prefix=/usr/local --skip-license \
     && rm cmake.sh
 ENV PATH="/usr/local/bin:${PATH}"
 
-# Create and run as user rv (match upstream)
+# -----------------------------------------------------------------------------
+# Layer 3: User and Ninja
+# -----------------------------------------------------------------------------
 RUN useradd -u 1001 -ms /bin/bash rv
 WORKDIR /home/rv
 USER rv
 
 ENV PATH=/home/rv/.local/bin:/usr/local/bin:$PATH
 
-# Install Ninja
-RUN wget https://github.com/ninja-build/ninja/releases/download/v${NINJA_VERSION}/ninja-linux.zip \
-    && unzip ninja-linux.zip -d ./ninja \
-    && echo 'export PATH=/home/rv/ninja:$PATH' >> /home/rv/.bash_profile \
+RUN wget -q "https://github.com/ninja-build/ninja/releases/download/v${NINJA_VERSION}/ninja-linux.zip" \
+    && unzip -q ninja-linux.zip -d ./ninja \
     && rm ninja-linux.zip
 ENV PATH=/home/rv/ninja:$PATH
 
-# Install pyenv
-RUN git clone http://github.com/pyenv/pyenv.git /home/rv/.pyenv
+# -----------------------------------------------------------------------------
+# Layer 4: pyenv clone only (no Python yet; clone changes rarely)
+# -----------------------------------------------------------------------------
+RUN git clone --depth 1 https://github.com/pyenv/pyenv.git /home/rv/.pyenv
 ENV PYENV_ROOT=/home/rv/.pyenv
 ENV PATH=$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH
 RUN echo 'export PYENV_ROOT="/home/rv/.pyenv"' >> ~/.bashrc \
     && echo 'export PATH="$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc \
     && echo 'eval "$(pyenv init -)"' >> ~/.bashrc
 
-# Python environment
+# -----------------------------------------------------------------------------
+# Layer 5: Python install via pyenv (expensive; cached unless PYTHON_VERSION changes)
+# -----------------------------------------------------------------------------
 RUN pyenv install ${PYTHON_VERSION} \
     && pyenv global ${PYTHON_VERSION}
 
-RUN python -m pip install aqtinstall
+# -----------------------------------------------------------------------------
+# Layer 6: aqtinstall (cached unless we change pip deps)
+# -----------------------------------------------------------------------------
+RUN python -m pip install --no-cache-dir aqtinstall
 
-# Install Qt (match upstream modules and archives)
+# -----------------------------------------------------------------------------
+# Layer 7: Qt install (expensive; cached unless QT_VERSION or modules change)
+# -----------------------------------------------------------------------------
 RUN python -m aqt install-qt linux desktop ${QT_VERSION} gcc_64 -O ~/Qt \
     -m ${QT_MODULES} \
     --archives ${QT_ARCHIVES}
 
-# Set Qt environment
 ENV QT_HOME=/home/rv/Qt/${QT_VERSION}/gcc_64
 ENV PATH="${QT_HOME}/bin:${PATH}"
 ENV CMAKE_PREFIX_PATH="${QT_HOME}"
 
-# Copy build scripts (context is repo root)
+# -----------------------------------------------------------------------------
+# Layer 8: CI scripts (changes most often; keep last so above layers stay cached)
+# -----------------------------------------------------------------------------
 COPY ci/linux/detect_qt.sh ci/linux/build_in_container.sh /ci/
 USER root
 RUN chmod +x /ci/detect_qt.sh /ci/build_in_container.sh
