--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -45,15 +45,26 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image (upstream Rocky 9 Dockerfile)
+      - name: Build vanilla Docker image (upstream Rocky 9 Dockerfile)
         uses: docker/build-push-action@v6
         with:
           context: openrv-src
           file: openrv-src/dockerfiles/Dockerfile.Linux-Rocky9-CY2024
           load: true
-          tags: openrv-build-rocky9
+          tags: openrv-rocky9-base
           cache-from: type=gha,scope=rocky9
           cache-to: type=gha,mode=max,scope=rocky9
+          push: false
+
+      - name: Build extended Docker image (vanilla + GL/devel packages)
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ci/linux/Dockerfile.rocky9-cy2024
+          load: true
+          tags: openrv-build-rocky9
+          cache-from: type=gha,scope=rocky9-ext
+          cache-to: type=gha,mode=max,scope=rocky9-ext
           push: false
 
       - name: Run OpenRV build (Rocky 9)
