Add disk space management step in GitHub Actions workflow
Introduce a new step in the openrv-release.yml workflow to free up disk space on Ubuntu runners. This enhancement includes options for managing tool caches, Android, .NET, Haskell, large packages, Docker images, and swap storage, improving the overall efficiency of the build process.

--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -21,6 +21,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
+
       # Resolve tag to commit SHA so cache key changes when the tag is overwritten
       - name: Get OpenRV tag commit SHA
         id: openrv-sha
